Bug in CodeMirror on IE8.

--- a/trunk/src/SampleWebApplication/styles/Default.css
+++ b/trunk/src/SampleWebApplication/styles/Default.css
@@ -9,5 +9,5 @@ h1 {
 
 p {
   line-height: 1.6em;
-  margin-bottom: 2em;
+  margin-bottom: 1.9em;
 }
